@@ -1,5 +1,11 @@
 2006-10-30	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
+	* configure.in:
+	* Makefile.am:
+	* Makefile.svn:
+	build-integration of LUPUS which is now an external
+	subversion-reference
+
 	* common/src/ivs_connection.cpp:
 	fixed several memory-leaks
 
